Fix cards starting points on safari

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@ body {
     margin: 0;
     font-family: 'Bilbo', cursive;
     text-align: center;
-    background: url(images/background.jpg) no-repeat center fixed;
+    background: url(assets/images/background.jpg) no-repeat center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size:cover;
@@ -196,6 +196,7 @@ h1 {
     padding: 0;
     position: absolute;
     backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
     margin: 0;
     
     
